services/bookwyrm/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat 
  labels:
    app: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
        app.kubernetes.io/name: bookwyrm-celery-beat
    spec:
      containers:
      - name: celery-beat
        image: cmoultrie/bookwyrm@sha256:a36bc90818b00f282722a2e6c1db4fce79ff32bbabb76d812969120558618361
        command: ["/usr/local/bin/celery"]
        args: ["-A", "celerywyrm", "beat", "-l", "INFO", "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler"]
        volumeMounts:
        - name: bookwyrm-env
          mountPath: "/app/.env"
          subPath: ".env"
          readOnly: true
      volumes:
      - name: bookwyrm-env
        secret:
          secretName: bookwyrm-env
