services/bookwyrm/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker 
  labels:
    app: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
        app.kubernetes.io/name: bookwyrm-celery-worker
    spec:
      containers:
      - name: celery-worker
        image: cmoultrie/bookwyrm
        command: ["/usr/local/bin/celery"]
        args: ["-A", "celerywyrm", "worker", "-l", "info", "-Q", "high_priority,medium_priority,low_priority,imports"]
        volumeMounts:
        - name: bookwyrm-env
          mountPath: "/app/.env"
          subPath: ".env"
          readOnly: true
      volumes:
      - name: bookwyrm-env
        secret:
          secretName: bookwyrm-env
