services/bookwyrm/flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower 
  labels:
    app: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
        app.kubernetes.io/name: bookwyrm-flower
    spec:
      containers:
      - name: flower
        image: cmoultrie/bookwyrm
        command: ["/usr/local/bin/celery"]
        args: ["-A", "celerywyrm", "flower", "--basic_auth=${FLOWER_USER}:${FLOWER_PASSWORD}", "--url_prefix=flower"]
        volumeMounts:
        - name: bookwyrm-env
          mountPath: "/app/.env"
          subPath: ".env"
          readOnly: true
      volumes:
      - name: bookwyrm-env
        secret:
          secretName: bookwyrm-env
