services/bookwyrm/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web 
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        app.kubernetes.io/name: bookwyrm-web
    spec:
      containers:
      - name: web
        image: cmoultrie/bookwyrm@sha256:a36bc90818b00f282722a2e6c1db4fce79ff32bbabb76d812969120558618361
        ports:
        - containerPort: 8000
        # command: ["sleep"]
        # args: ["infinity"]
        command: ["/usr/local/bin/gunicorn"]
        args: ["bookwyrm.wsgi:application", "--bind", "0.0.0.0:8000"]
        volumeMounts:
        - name: bookwyrm-env
          mountPath: "/app/.env"
          subPath: ".env"
          readOnly: true
      volumes:
      - name: bookwyrm-env
        secret:
          secretName: bookwyrm-env
