services/bookwyrm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookwyrm-web
spec:
  selector:
    app.kubernetes.io/name: bookwyrm-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
