services/bookwyrm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookwyrm-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - bookwyrm.frodux.in
    secretName: bookwyrm-tls
  rules:
  - host: bookwyrm.frodux.in
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: bookwyrm-web
              port:
                number: 80
